hphp/hack/test/decl/case_types_basic.php.typecheck.exp
File "case_types_basic.php", line 4, characters 11-13:
The case type `CT1` cannot be decomposed because it contains overlapping variant types. The following types share the same runtime data type `keyset`: (Typing[4475])
  File "case_types_basic.php", line 4, characters 53-62:
  keyset<T1>
  File "case_types_basic.php", line 4, characters 66-82:
  (function(T2): T)
